fix: stabilize system font mutation scheduling (#77)
## 主要改动

- 将 `system_server` 字体缩放调度改为字段级策略：
  - `FONT_SCALE` 只允许在 `launch-activity-item` 写入
  - viewport 相关字段继续保留多生命周期入口
- 将 `system_server` 包选择改为 entry-aware / field-aware：
  - font-only 配置只会进入 `launch-activity-item`
  - font-only 配置不会进入 `config-dispatch` / `display-manager-info`
  - viewport 配置仍可进入非 launch 的 viewport 热路径
- 明确 `system_server_font` / `activity_thread_font` 是内部调度域，不再作为自定义 hook 链路 UI 的用户开关状态参与保存和恢复。
- 修正文档中 compat100 / modern101 的 runtime 路线描述，避免把共享代码行为误写成 compat100 已安装的系统路线。
- 补充系统字体调度重构执行记录和路线文档。

## 语义相关

自定义 hook 链路 UI 仍只表达兼容模式 / field-rewrite 链路。

系统模式下的字体缩放由 DPIS 的统一调度负责，不要求用户知道某个应用不能打开某条高风险链路。即使内部存在 `system_server_font` 这类运行时域，也由调度策略决定它能在哪些生命周期入口参与，而不是通过 app-specific 推荐配置规避问题。

## 后续

- 系统字体缩放目前采用 launch-only 的 fontScale 写入策略，避免后续配置分发阶段触发字体配置 relaunch。
- 整理字体路线优先围绕统一调度和文档命名收束，不引入 app-specific 更多推荐名单或独立链路。